<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#0fc">
    <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/viewexpression"
            android:textColor="#000"
            android:background="#FFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            android:gravity="center|right|center_horizontal|fill_horizontal"
            tools:ignore="RtlCompat"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_width="0dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:layout_weight="1"
                    style="?android:attr/buttonBarStyle">
                <Button
                        android:text="@string/_7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/sete"
                        android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/oito" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/nove"
                        android:layout_weight="1"
                        style="?android:buttonBarButtonStyle"
                        android:background="@color/numberButtons"
                        android:textColor="#fff"
                        android:textAllCaps="true"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:layout_weight="1"
                    style="?android:attr/buttonBarStyle">
                <Button
                        android:text="@string/_4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/quatro" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/cinco" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/seis" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:layout_weight="1"
                    style="?android:attr/buttonBarStyle">
                <Button
                        android:text="@string/_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/um" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/dois" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/tres" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:layout_weight="1"
                    style="?android:attr/buttonBarStyle">
                <Button
                        android:text="@string/_ponto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/ponto" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/zero" android:layout_weight="1"
                        style="?android:buttonBarButtonStyle" android:background="@color/numberButtons"
                        android:textColor="#fff" android:textAllCaps="true" android:textSize="20sp"/>
                <Button
                        android:text="@string/_igual"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/igual"
                        android:layout_weight="1"
                        style="?android:buttonBarButtonStyle"
                        android:background="@color/numberButtons"
                        android:textColor="#fff"
                        android:textAllCaps="true"
                        android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/buttonBarStyle">
            <Button
                    android:text="DEL"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/del" android:layout_weight="1"
                    style="?android:buttonBarButtonStyle" android:textColor="#fff"
                    android:background="@color/operatorButtons" android:textAllCaps="true" android:textSize="20sp"/>
            <Button
                    android:text="@string/div"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/div" android:layout_weight="1"
                    style="?android:buttonBarButtonStyle" android:textColor="#fff"
                    android:background="@color/operatorButtons" android:textAllCaps="true" android:textSize="20sp"/>
            <Button
                    android:text="@string/mult"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/vezes" android:layout_weight="1"
                    style="?android:buttonBarButtonStyle" android:textColor="#fff"
                    android:background="@color/operatorButtons" android:textAllCaps="true" android:textSize="20sp"/>
            <Button
                    android:text="@string/menos"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/menos" android:layout_weight="1"
                    style="?android:buttonBarButtonStyle" android:textColor="#fff"
                    android:background="@color/operatorButtons" android:textAllCaps="true" android:textSize="20sp"/>
            <Button
                    android:text="@string/mais"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/mais" android:layout_weight="1"
                    style="?android:buttonBarButtonStyle" android:textColor="#fff"
                    android:background="@color/operatorButtons" android:textAllCaps="true" android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>